[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/Enemies/zombie_stand.png" type="Texture" id=1]
[ext_resource path="res://Images/Enemies/zombie_walk1.png" type="Texture" id=2]
[ext_resource path="res://Images/Enemies/zombie_walk2.png" type="Texture" id=3]
[ext_resource path="res://Enemy/RiverEnemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 29.4846
height = 25.8884

[sub_resource type="CircleShape2D" id=3]
radius = 54.6643

[node name="RiverEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.678856, 11.7669 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -7.62939e-06, 5.88344 )
shape = SubResource( 3 )

[node name="GroundCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -28.7383, -0.226288 )
cast_to = Vector2( 0, 70 )

[node name="GroundCheckRight" type="RayCast2D" parent="."]
position = Vector2( 32.1326, 0.452576 )
cast_to = Vector2( 0, 70 )

[node name="WallCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -18.5554, -0.226288 )
cast_to = Vector2( -30, 0 )

[node name="WallCheckRight" type="RayCast2D" parent="."]
position = Vector2( 22.176, 0.226288 )
cast_to = Vector2( 30, 0 )

[node name="Timer" type="Timer" parent="."]
